# radio-slate

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.zed/: settings.json
assets/: radio-slate-autostart.desktop  radio-slate.desktop
docs/: _config.yml  index.html
docs/assets/: styles.css
scripts/: install-fedora.sh  install-steamos.sh  install-ubuntu.sh
src/: config.rs  main.rs
src/application/: mod.rs  playback_service.rs  playback_snapshot.rs
src/domain/: mod.rs  station.rs
src/infrastructure/: audio_player.rs  import_export.rs  in_memory_store.rs  json_store.rs  mod.rs  mpris.rs  notifications.rs  output.rs  sqlite_store.rs
src/ui/: cli.rs  metadata.rs  mod.rs  shortcuts.rs  tray.rs
tests/: playback_service_integration.rs  tray_lifecycle_integration.rs
